--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,5 +34,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://MonGBaNa.github.io/my-todo-calander"
+  "homepage": "https://mongbana.github.io/my-todo-calander",
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
+  }
 }
